--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -51,4 +51,11 @@
     <!-- Whether the display blanks itself when transitioning from a doze to a non-doze state -->
     <bool name="config_displayBlanksAfterDoze">false</bool>
 
+         <!--  The max scale for the wallpaper when it's zoomed in  -->
+<item name="config_wallpaperMaxScale" format="float" type="dimen">1</item>
+
+       <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
+        autodetected from the Configuration. -->
+     <bool name="config_showNavigationBar">true</bool>
+      
 </resources>
