--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+ <!-- Control whether the always on display mode is available. This should only be enabled on
+         devices where the display has be tuned to be power efficient in DOZE and/or DOZE_SUSPEND
+         states. -->
+    <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
+
+    <!-- Disable AOD by default -->
+    <bool name="config_dozeAlwaysOnEnabled">false</bool>
+
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
  <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
